2010-03-16  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpTransportElement.cs
	  MsmqIntegrationElement.cs
	  MsmqElementBase.cs
	  NamedPipeTransportElement.cs
	  HttpsTransportElement.cs
	  TransportElement.cs
	  MsmqTransportElement.cs
	  HttpTransportElement.cs : implement missing methods.

2010-03-16  Atsushi Enomoto  <atsushi@ximian.com>

	* IssuedTokenClientElement.cs, MsmqBindingElementBase.cs,
	  NamedPipeConnectionPoolSettingsElement.cs,
	  TcpConnectionPoolSettingsElement.cs,
	  StandardBindingReliableSessionElement.cs,
	  LocalServiceSecuritySettingsElement.cs : use TimeSpanConverter.

2010-03-15  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDebugElement.cs : binding names could rather be empty.

2010-03-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlDictionaryReaderQuotasElement.cs : add ApplyConfiguration().
	* BasicHttpBindingElement.cs : apply transport security part.
	  Use ReaderQuotas.ApplyConfiguration() for better config application.
	* HttpTransportSecurityElement.cs :
	  Add utility config method. Fix enum default values.

2010-03-08  Atsushi Enomoto  <atsushi@ximian.com>

	* X509RecipientCertificateServiceElement.cs : remove extra FIXMEs.
	* ServiceCredentialsElement.cs : implement CreateBehavior().

2010-03-03  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDebugElement.cs, ServiceMetadataPublishingElement.cs:
	  add missing members.

2009-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ConfigUtil.cs : revert the change, to use ServiceHostingEnvironment
	  internal member again.

2009-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceThrottlingElement.cs : implement CreateBehavior().

2009-10-01  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceModelExtensionCollectionElement.cs : add couple of missing
	  members. Implement Reset() to not clean up items (so far it is
	  hacky workaround).

2009-10-01  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceBehaviorElement.cs, EndpointBehaviorElement.cs :
	  remove extra interfaces.